--- a/Forever Memories/styles.css
+++ b/Forever Memories/styles.css
@@ -1,3 +1,17 @@
 body {
   background-color: rgb(102, 207, 241);
 }
+
+#pack {
+  margin-top: 100px;
+  margin-left: 1em;
+  width: 98vw;
+}
+
+tr {
+  border-width: 5px;
+}
+
+td {
+  border-width: 5px;
+}
